# currency-exchange-api

./: .env.example  .pre-commit-config.yaml  README.md  currency_list.json  main.py  pyproject.toml  requirements.txt  rquirements.txt
app/api/endpoints/: currency.py  users.py
app/api/schemas/: currency.py  user.py
app/core/: config.py  security.py
app/dependencies/: database.py  external_api.py
app/models/: base.py  user.py
app/repositiries/: base_repository.py  user_repository.py
app/services/: external_api_service.py  user_service.py
app/utils/: external_api.py
tests/: conftest.py  test_auth.py  test_currency.py
