[project]
name = "currency-exchange-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "authx==1.4.3",
    "bcrypt==4.1.2",
    "fastapi==0.118.0",
    "passlib==1.7.4",
    "pydantic-settings==2.11.0",
    "pytest==8.4.2",
    "requests==2.32.5",
    "uvicorn==0.37.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest-mock>=3.15.1",
]
